--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^7.6.15",
     "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.7.1",
+    "class-transformer": "^0.4.0",
     "mongoose": "^5.12.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
