--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typeorm": "ts-node --files -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/db/config.ts",
     "migration:create": "yarn typeorm migration:create",
     "migration:run": "yarn typeorm migration:run",
-    "migration:revert": "yarn typeorm migration:revert"
+    "migration:revert": "yarn typeorm migration:revert",
+    "deploy": "npm run prebuild && npm run build && npm run start:prod"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
