--- a/package.json
+++ b/package.json
@@ -22,29 +22,28 @@
     "typeorm": "ts-node --files -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/db/config.ts",
     "migration:create": "yarn typeorm migration:create",
     "migration:run": "yarn typeorm migration:run",
-    "migration:revert": "yarn typeorm migration:revert",
-    "deploy": "npm run prebuild && npm run build && npm run start:prod"
+    "migration:revert": "yarn typeorm migration:revert"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.15",
-    "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.6.15",
-    "@nestjs/microservices": "^7.6.15",
-    "@nestjs/platform-express": "^7.6.15",
-    "@nestjs/typeorm": "^7.1.5",
-    "amqp-connection-manager": "^3.2.2",
-    "amqplib": "^0.7.1",
-    "class-transformer": "^0.4.0",
-    "mongodb": "^3.6.9",
+    "@nestjs/common": "^8.4.4",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/core": "^8.4.4",
+    "@nestjs/microservices": "^8.4.4",
+    "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/typeorm": "^8.0.3",
+    "amqp-connection-manager": "^4.1.2",
+    "amqplib": "^0.8.0",
+    "class-transformer": "^0.5.1",
+    "mongodb": "^4.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
-    "typeorm": "^0.2.34"
+    "rxjs": "^7.5.5",
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.6.0",
-    "@nestjs/schematics": "^7.3.0",
-    "@nestjs/testing": "^7.6.15",
+    "@nestjs/cli": "^8.2.5",
+    "@nestjs/schematics": "^8.0.10",
+    "@nestjs/testing": "^8.4.4",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
